[package]
name = "webcam"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.83.0"
anyhow = "1"
minifb = "0.24"

[dependencies.nokhwa]
version = "0.10.4"
features = ["input-native", "output-threaded"]
